[metadata]
name = pybackup
version = 0.1.0
author = Antonio Mancuso
author-email = mancusoa74@yahoo.com
summary = pybackup near realtime backup
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/mancusoa74/pybackup
project_urls =
    Bug Tracker = https://github.com/mancusoa74/pybackup/issues
    Documentation = https://github.com/mancusoa74/pybackup
    Source Code = https://github.com/mancusoa74/pybackup
license = gpl-3.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Linux
    Environment :: Windows + Linux SubSystem
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: gpl-3.0 License
    Operating System :: Linux
    Programming Language :: Python :: 3.7
keywords =
    backup
    snapshot

[files]
packages =
    pybackup
data_files =
    /home/anmancus = pybackup/pybackup.yml

[entry_points]
console_scripts =
    pybackup = pybackup.cli:main
